[NTP] Separate internal custom link updates from user changes

When a default URL scheme is updated after URL validation, it is counted
as a user action. This causes "Undo" to revert the URL scheme update
instead of the user's add/update action.

Add an additional parameter to CustomLinksManager::UpdateLink in order
to distinguish between internal and user changes. Internal changes will
not update the previous state that is restored when
CustomLinksManager::UndoAction is called.

Bug: 896143
Change-Id: I643679fab5e546fac7e41214af6ff8a4ba9c8b53
Reviewed-on: https://chromium-review.googlesource.com/c/1287259
Commit-Queue: Kristi Park <kristipark@chromium.org>
Reviewed-by: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600988}
Former-commit-id: adf056599a25e3d59d1272de431aae24b549f927